WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140726
[Win] eventSender does not support scalePageBy
https://bugs.webkit.org/show_bug.cgi?id=140726
Summary
[Win] eventSender does not support scalePageBy
Brent Fulgham
Reported
2015-01-21 08:54:31 PST
We need to implement zoomPageIn and zoomPageOut in DRT to support tests: fast/dom/zoom-scroll-page-test.html
Attachments
Patch
(6.14 KB, patch)
2015-01-21 10:28 PST
,
Brent Fulgham
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2015-01-21 09:27:38 PST
Actually, the missing function is 'scalePageBy', which causes the test to fail before we even hit the (existing) zoomPageIn/zoomPageOut.
Radar WebKit Bug Importer
Comment 2
2015-01-21 10:20:20 PST
<
rdar://problem/19549865
>
Brent Fulgham
Comment 3
2015-01-21 10:28:58 PST
Created
attachment 245068
[details]
Patch
Brent Fulgham
Comment 4
2015-01-21 10:31:18 PST
Comment on
attachment 245068
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=245068&action=review
> Tools/DumpRenderTree/win/EventSender.cpp:763 > +
I should be checking that argumentCount >= 3 so we don't crash.
Brent Fulgham
Comment 5
2015-01-21 10:37:40 PST
These tests also pass now: fast/repaint/fixed-in-page-scale.html fast/repaint/fixed-right-bottom-in-page-scale.html fast/repaint/fixed-right-in-page-scale.html
Brent Fulgham
Comment 6
2015-01-21 10:53:11 PST
Also: fast/css/sticky/sticky-top-zoomed.html compositing/tiling/tile-cache-zoomed.html:
Brent Fulgham
Comment 7
2015-01-21 10:59:01 PST
Committed
r178849
: <
http://trac.webkit.org/changeset/178849
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug