[Win] eventSender does not support scalePageBy https://bugs.webkit.org/show_bug.cgi?id=140726 <rdar://problem/19549865>

Reviewed by Dean Jackson.

Source/WebKit/win:

* Interfaces/IWebViewPrivate.idl: Add scaleWebView API.
* WebView.cpp:
(WebView::scaleWebView):
Connect WebCore implementation to the Windows COM interface.
* WebView.h:

Tools:

* DumpRenderTree/win/EventSender.cpp:
(scalePageByCallback): Provide implementation using new WebView method.

LayoutTests:

* platform/win/TestExpectations: Unskip test.


Canonical link: https://commits.webkit.org/158707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178849 268f45cc-cd09-0410-ab3c-d52691b4dbfc