Source/WebKit/win/WebView.h
@@ -1020,6 +1020,7 @@ private:
     void setShouldInvertColors(bool);
 
     HRESULT STDMETHODCALLTYPE setLoadResourcesSerially(BOOL);
+    HRESULT STDMETHODCALLTYPE scaleWebView(double scale, POINT origin);
 
 protected:
     static bool registerWebViewWindowClass();
